# cpld-viewer

./: .gitignore  LICENSE.md  README.md  package.json  tsconfig.json  webpack.config.js
media/: led.schema.jsonld
media/js/: cpldviewer.js  cpldviewer.js.LICENSE.txt
proxy/: README.md  config.template.yml  proxy.py  pyproject.toml
src/: cpldviewer.css  cpldviewer.js  extension.ts
